--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Known - Education HTML Template</title>
+     <title>Lighting - Education HTML Template</title>
 <!-- 
 
 Known Template 
